monitoring/controllers/staging/hubble-ui/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: monitoring
spec:
  parentRefs:
    - name: lan-gateway
      namespace: lan-gateway
      sectionName: lan-https
  hostnames:
    - "hubble.raymondcollazo.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
